--- a/client/src/pages/Favorites/style.css
+++ b/client/src/pages/Favorites/style.css
@@ -1,8 +1,8 @@
-/* .background {
+.background {
   margin-top: -80px;
   height:100vh;
   background-image: url('../../components/Mona.jpeg');
   background-repeat: repeat;
   background-position: center;
   background-size: cover;
-  } */
+  }
