--- a/client/src/components/ArtistCard/Style.css
+++ b/client/src/components/ArtistCard/Style.css
@@ -6,8 +6,12 @@ height:285px;
 
 button {
   margin-bottom: 10px;
+  margin-left: 10px;
 }
 
+.col1 {
+padding-left: 20px;
+}
 
 /* .cardImgContainer 
 display: inline-block;
